# PPB_Project

./: .gitattributes  .gitignore  CMakeLists.txt  diff_with_friend.diff  test.lua  дгшл.txt  ошибки.txt
AKIP-manager_module/: CMakeLists.txt  CMakeLists.txt.autosave  abstractscpicontroller.cpp  abstractscpicontroller.h  akipfacade.cpp  akipfacade.h  gratten_limits.h  grattencontrolwidget.cpp  grattenga1483controller.cpp  grattenga1483controller.h  iakipcontroller.h  laninterface.cpp  laninterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  usbinterface.cpp  usbinterface.h
AKIP-manager_module/ch375_sdk/ch375_linux/: README.md
AKIP-manager_module/ch375_sdk/ch375_linux/demo/: ch37x_lib.c  ch37x_lib.h  demo_cmd.c
AKIP-manager_module/ch375_sdk/ch375_linux/driver/: ch37x.c
AKIP-manager_module/ch375_sdk/ch375_linux/mcu/: DEVICE.C
CommonLib/: CMakeLists.txt
PPBCommunicationLib/: .gitignore  CMakeLists.txt  comm_dependencies.h  stubprotocoladapter.h
PPBCommunicationLib/include/: iprotocol_adapter.h  itransport.h
PPBCommunicationLib/src/: commandandoperation.cpp  commandandoperation.h  commandinterface.h  communicationengine.cpp  communicationengine.h  communicationfacade.cpp  communicationfacade.h  packetbuilder.cpp  packetbuilder.h  protocoladapter.cpp  protocoladapter.h  udpclient.cpp  udpclient.h
PPBCommunicationLib/tests/: mockudpclient.h  ppbprotocol.h  test_runner.cpp  testengine.cpp  testengine.h
PPBControllerLib/: CMakeLists.txt
PPBControllerLib/include/: controller_dependencies.h  ppbcontrollerlib.h  ppbstate.h
PPBControllerLib/src/: ppbcontrollerlib.cpp
PPBControllerLib/tests/: main.cpp
PPB_GUI_Sandbox/: CMakeLists.txt  Doxyfile  akip_pult.cpp  akip_pult.h  akip_pult.ui  akipwidget.cpp  akipwidget.h  akipwidget.ui  applicationmanager.cpp  applicationmanager.h  assets.qrc  connectionwidget.cpp  connectionwidget.h  connectionwidget.ui  controlwidget.cpp  controlwidget.h  controlwidget.ui  dataviewwidget.cpp  dataviewwidget.h  dataviewwidget.ui  dependencies.h  fuwidget.cpp  fuwidget.h  fuwidget.ui  grattencontrolwidget.h  grattencontrolwidget.ui  loguimanager.cpp  loguimanager.h  logwidget.cpp  logwidget.h  logwidget.ui  main.cpp  mainpage.dox  performancewindow.cpp  performancewindow.h  performancewindow.ui  pult.cpp  pult.h  pult.ui  scenariowidget.cpp  (+8 more)
PPB_GUI_Sandbox/assets/: logstyles.css
ScenarioModule/: CMakeLists.txt  scenarioengine.cpp  scenarioengine.h  scripts.qrc
ScenarioModule/scripts/: autotest.lua  loadtest.lua  stress.lua
common/converters/: dataconverter.cpp  dataconverter.h
common/include/: icommunication.h  icontroller.h  packetanalyzer_interface.h  ppbprotocol.h  ppbstate.h
common/logging/: CMakeLists.txt  logcategories.h  logconfig.cpp  logconfig.h  logdistributor.cpp  logdistributor.h  logentry.cpp  logmacros.h  logwrapper.cpp  logwrapper.h
common/performance/: performancemonitor.cpp  performancemonitor.h
